--- a/css/style.scss
+++ b/css/style.scss
@@ -225,6 +225,10 @@ span {
 	border: 1px solid #eee;
 	border-radius: 6px;
 	margin-top: 10px;
+
+	.form-control {
+		width: 50%;
+	}
 }
 
 label[for=tag-chooser] {
